# B5_Chatbot1_MalcolmMaxim

./: main.py  plan.md  pyproject.toml
src/: main.py  response_parser.py  responses.json  tokenizer.py
